--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -15,11 +15,20 @@ framework = arduino
 upload_speed = 500000
 upload_port = /dev/ttyUSB0
 monitor_speed = 115200
+
 monitor_flags =
 	--raw
 	--rts
 	0
-; build_flags = -DDEBUG_ESP_PORT=Serial -DDEBUG_ESP_CORE -DDEBUG_ESP_WIFI
+
+build_flags =
+	-D WIFI_NAME=\"<WIFI SSID>\"
+	-D WIFI_PW=\"<WIFI PASSWORD>\"
+	-D CURRENT_TIME=$UNIX_TIME
+	; -D DEBUG_ESP_PORT=Serial
+	; -D DEBUG_ESP_CORE
+	; -D DEBUG_ESP_WIFI
+
 lib_deps =
 	Adafruit NeoPixel
 	ESP8266WiFi
